Added currently finished spells to the API

--- a/API/Core.ini
+++ b/API/Core.ini
@@ -2,7 +2,34 @@
 Binding.tsv
 Bolt.tsv
 Burning Hands.tsv
+Chain Lightning.tsv
+Chill Wave.tsv
+Colour Spray.tsv
+Darkness.tsv
+Detect Magic.tsv
+Drain Life.tsv
+Explosion.tsv
+Fireball.tsv
+Fly.tsv
+Haste.tsv
+Healing Word.tsv
+Hush.tsv
+Illusion.tsv
+Inspire.tsv
+Invisibility.tsv
+Knock.tsv
+Magic Hand.tsv
+Mark.tsv
+Negate.tsv
+Raise Dead.tsv
+Repel Evil.tsv
+Rift.tsv
+Scrying.tsv
+Seeming.tsv
 Sleep.tsv
+Summon Animal.tsv
+Touch of Life.tsv
+Word of Power.tsv
 
 [Mutations]
 
