Fixed Not Lucky Just Smart

--- a/API/Core.ini
+++ b/API/Core.ini
@@ -105,7 +105,7 @@ Mighty.tsv
 Mindflayer.tsv
 Mutant.tsv
 Ninja.tsv
-Not Lucky, Just Smart.tsv
+Not Lucky Just Smart.tsv
 Nurse.tsv
 Occult Practicioner.tsv
 Occultist.tsv
