Fixed issues with other traits

--- a/API/Core.ini
+++ b/API/Core.ini
@@ -136,7 +136,7 @@ Steamroller.tsv
 Strong.tsv
 Terminator.tsv
 Thick Skin.tsv
-Tomb Raider
+Tomb Raider.tsv
 Tough as Nails.tsv
 Transmuter.tsv
 Unyielding.tsv
