Added the rest of the spells to the API

--- a/API/Core.ini
+++ b/API/Core.ini
@@ -1,18 +1,22 @@
 [Spells]
+Acid Blast.tsv
 Binding.tsv
 Bolt.tsv
 Burning Hands.tsv
 Chain Lightning.tsv
 Chill Wave.tsv
 Colour Spray.tsv
+Conjure Water.tsv
 Darkness.tsv
 Detect Magic.tsv
 Drain Life.tsv
+Enfeebling Curse.tsv
 Explosion.tsv
 Fireball.tsv
 Fly.tsv
 Haste.tsv
 Healing Word.tsv
+Hex.tsv
 Hush.tsv
 Illusion.tsv
 Inspire.tsv
@@ -20,15 +24,27 @@ Invisibility.tsv
 Knock.tsv
 Magic Hand.tsv
 Mark.tsv
+Mind Rotting Curse.tsv
+Mirror Image.tsv
+Necrotic Grasp.tsv
 Negate.tsv
 Raise Dead.tsv
+Read Languages and Magic.tsv
 Repel Evil.tsv
 Rift.tsv
 Scrying.tsv
 Seeming.tsv
 Sleep.tsv
+Slowing Curse.tsv
+Storm.tsv
 Summon Animal.tsv
+Telepath.tsv
+Teleport.tsv
+Tongues.tsv
+Tongue Twisting Curse.tsv
+Torchlight.tsv
 Touch of Life.tsv
+Weakening Curse.tsv
 Word of Power.tsv
 
 [Mutations]
