Fixed a bug in Core for Telepathy module

--- a/API/Core.ini
+++ b/API/Core.ini
@@ -38,7 +38,7 @@ Sleep.tsv
 Slowing Curse.tsv
 Storm.tsv
 Summon Animal.tsv
-Telepath.tsv
+Telepathy.tsv
 Teleport.tsv
 Tongues.tsv
 Tongue Twisting Curse.tsv
