--- a/API/Core.ini
+++ b/API/Core.ini
@@ -1,5 +1,6 @@
 [Spells]
 Acid Blast.tsv
+Banish.tsv
 Binding.tsv
 Bolt.tsv
 Burning Hands.tsv
@@ -14,6 +15,7 @@ Enfeebling Curse.tsv
 Explosion.tsv
 Fireball.tsv
 Fly.tsv
+Gravity Manipulation.tsv
 Haste.tsv
 Healing Word.tsv
 Hex.tsv
@@ -29,6 +31,7 @@ Mirror Image.tsv
 Necrotic Grasp.tsv
 Negate.tsv
 Raise Dead.tsv
+Read Languages and Magic.tsv
 Repel Evil.tsv
 Rift.tsv
 Scrying.tsv
@@ -45,6 +48,7 @@ Torchlight.tsv
 Touch of Life.tsv
 Weakening Curse.tsv
 Word of Power.tsv
+Wyrding.tsv
 
 [Mutations]
 
