Added Warmth spell to API

--- a/API/Core.ini
+++ b/API/Core.ini
@@ -46,6 +46,7 @@ Tongues.tsv
 Tongue Twisting Curse.tsv
 Torchlight.tsv
 Touch of Life.tsv
+Warmth.tsv
 Weakening Curse.tsv
 Word of Power.tsv
 Wyrding.tsv
